cr-examples/mlir-tosa/lib/mlir_tosa_c_api.h

typedef struct MLIRModule_* MLIRModuleHandle;
/* Result codes */
typedef enum {
    MLIR_SUCCESS = 0,
    MLIR_ERROR_INVALID_PARAMETER = 1,
    MLIR_ERROR_VERIFICATION_FAILED = 2,
    MLIR_ERROR_FILE_IO = 3,
    MLIR_ERROR_INTERNAL = 4
} MLIRResultCode;
void mlir_module_destroy(MLIRModuleHandle module);
MLIRResultCode mlir_module_verify(MLIRModuleHandle module);
MLIRResultCode mlir_module_dump(MLIRModuleHandle module);
MLIRResultCode mlir_module_write_text(MLIRModuleHandle module, const char* filename);
MLIRResultCode mlir_module_write_bytecode(MLIRModuleHandle module, const char* filename);
char* mlir_module_to_string(MLIRModuleHandle module);
void mlir_string_destroy(char* str);