cr-examples/mlir-tosa/src/main/java/mlir/tosa/bindings/mlir_tosa_c_api_h.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void mlir_module_destroy(MLIRModuleHandle module)
     * }
     */
    public static FunctionDescriptor mlir_module_destroy$descriptor() {
        return mlir_module_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void mlir_module_destroy(MLIRModuleHandle module)
     * }
     */
    public static MethodHandle mlir_module_destroy$handle() {
        return mlir_module_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void mlir_module_destroy(MLIRModuleHandle module)
     * }
     */
    public static MemorySegment mlir_module_destroy$address() {
        return mlir_module_destroy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void mlir_module_destroy(MLIRModuleHandle module)
     * }
     */
    public static void mlir_module_destroy(MemorySegment module) {
        var mh$ = mlir_module_destroy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_module_destroy", module);
            }
            mh$.invokeExact(module);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_module_verify {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_INT,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_module_verify");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_verify(MLIRModuleHandle module)
     * }
     */
    public static FunctionDescriptor mlir_module_verify$descriptor() {
        return mlir_module_verify.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_verify(MLIRModuleHandle module)
     * }
     */
    public static MethodHandle mlir_module_verify$handle() {
        return mlir_module_verify.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_verify(MLIRModuleHandle module)
     * }
     */
    public static MemorySegment mlir_module_verify$address() {
        return mlir_module_verify.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_verify(MLIRModuleHandle module)
     * }
     */
    public static int mlir_module_verify(MemorySegment module) {
        var mh$ = mlir_module_verify.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_module_verify", module);
            }
            return (int)mh$.invokeExact(module);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_module_dump {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_INT,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_module_dump");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_dump(MLIRModuleHandle module)
     * }
     */
    public static FunctionDescriptor mlir_module_dump$descriptor() {
        return mlir_module_dump.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_dump(MLIRModuleHandle module)
     * }
     */
    public static MethodHandle mlir_module_dump$handle() {
        return mlir_module_dump.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_dump(MLIRModuleHandle module)
     * }
     */
    public static MemorySegment mlir_module_dump$address() {
        return mlir_module_dump.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_dump(MLIRModuleHandle module)
     * }
     */
    public static int mlir_module_dump(MemorySegment module) {
        var mh$ = mlir_module_dump.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_module_dump", module);
            }
            return (int)mh$.invokeExact(module);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_module_write_text {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_INT,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_module_write_text");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_write_text(MLIRModuleHandle module, const char *filename)
     * }
     */
    public static FunctionDescriptor mlir_module_write_text$descriptor() {
        return mlir_module_write_text.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_write_text(MLIRModuleHandle module, const char *filename)
     * }
     */
    public static MethodHandle mlir_module_write_text$handle() {
        return mlir_module_write_text.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_write_text(MLIRModuleHandle module, const char *filename)
     * }
     */
    public static MemorySegment mlir_module_write_text$address() {
        return mlir_module_write_text.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_write_text(MLIRModuleHandle module, const char *filename)
     * }
     */
    public static int mlir_module_write_text(MemorySegment module, MemorySegment filename) {
        var mh$ = mlir_module_write_text.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_module_write_text", module, filename);
            }
            return (int)mh$.invokeExact(module, filename);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_module_write_bytecode {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_INT,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_module_write_bytecode");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_write_bytecode(MLIRModuleHandle module, const char *filename)
     * }
     */
    public static FunctionDescriptor mlir_module_write_bytecode$descriptor() {
        return mlir_module_write_bytecode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_write_bytecode(MLIRModuleHandle module, const char *filename)
     * }
     */
    public static MethodHandle mlir_module_write_bytecode$handle() {
        return mlir_module_write_bytecode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_write_bytecode(MLIRModuleHandle module, const char *filename)
     * }
     */
    public static MemorySegment mlir_module_write_bytecode$address() {
        return mlir_module_write_bytecode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRResultCode mlir_module_write_bytecode(MLIRModuleHandle module, const char *filename)
     * }
     */
    public static int mlir_module_write_bytecode(MemorySegment module, MemorySegment filename) {
        var mh$ = mlir_module_write_bytecode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_module_write_bytecode", module, filename);
            }
            return (int)mh$.invokeExact(module, filename);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_module_to_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_module_to_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * char *mlir_module_to_string(MLIRModuleHandle module)
     * }
     */
    public static FunctionDescriptor mlir_module_to_string$descriptor() {
        return mlir_module_to_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * char *mlir_module_to_string(MLIRModuleHandle module)
     * }
     */
    public static MethodHandle mlir_module_to_string$handle() {
        return mlir_module_to_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * char *mlir_module_to_string(MLIRModuleHandle module)
     * }
     */
    public static MemorySegment mlir_module_to_string$address() {
        return mlir_module_to_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * char *mlir_module_to_string(MLIRModuleHandle module)
     * }
     */
    public static MemorySegment mlir_module_to_string(MemorySegment module) {
        var mh$ = mlir_module_to_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_module_to_string", module);
            }
            return (MemorySegment)mh$.invokeExact(module);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_string_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_string_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void mlir_string_destroy(char *str)
     * }
     */
    public static FunctionDescriptor mlir_string_destroy$descriptor() {
        return mlir_string_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void mlir_string_destroy(char *str)
     * }
     */
    public static MethodHandle mlir_string_destroy$handle() {
        return mlir_string_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void mlir_string_destroy(char *str)
     * }
     */
    public static MemorySegment mlir_string_destroy$address() {
        return mlir_string_destroy.ADDR;
    }
